<?xml version='1.0' ?>
<resources>
  <string name="title">Shush! Ringer Restorer</string>
  <string name="welcomeMessage">Activate Shush by turning your ringer off. You can use the volume down button just like you\'re used to.</string>
  <string name="okay">Sweet!</string>
  <string name="ringerRestored">Ringer restored.</string>
  <string name="ringerShushedUntil">Ringer shushed \'til %1$s</string>
  <string name="ringerShushedIndefinitely">Ringer shushed indefinitely!</string>
  <string name="turnRingerOnIn">Turn ringer on in:</string>
  <string name="restoreVolumeLevel">Restore volume level:</string>
  <string name="vibrateOffOn">Vibrate Later Only</string>
  <string name="vibrateOffOff">Vibrate Never</string>
  <string name="vibrateOnOn">Vibrate Always</string>
  <string name="vibrateOnOff">Vibrate Now Only</string>
  <string name="minutes">minutes</string>
  <string name="hour">hour</string>
  <string name="hours">hours</string>
  <string name="shush">Shush!</string>
  <string name="keepItOff">Keep it off.</string>
  <string name="turnItOnNow">Select to turn it on now.</string>
  <string name="notificationsOn">Notifications on</string>
  <string name="notificationsOff">Notifications off</string>
  <string name="pink">Pink</string>
  <string name="blue">Blue</string>
  <string name="green">Green</string>
  <string name="yellow">Yellow</string>
  <string name="orange">Orange</string>
  <string name="red">Red</string>
  <string name="purple">Purple</string>
  <string name="settingsTitle">CUSTOMIZE</string>
  <string name="shareTitle">SHARE THE LOVE</string>
  <string name="shareOverview">Like this app? Your friends will too!</string>
  <string name="shareButton">Share</string>
  <string name="shareChooserTitle">Share the Love</string>
  <string name="shareMessage">I heart Shush for Android. http://shushapp.com</string>
  <string name="shareSubject">Shush!</string>
</resources>