<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@android:style/Theme.Black.NoTitleBar.Fullscreen"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

  <TextView android:id="@+id/title"
          style="@android:style/TextAppearance.DialogWindowTitle"
          android:text="@string/turnRingerOnIn"
          android:textSize="22dip"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="8dip"
          android:layout_marginRight="8dip"/>

  <com.publicobject.shush.ClockSlider
          android:layout_marginTop="8dip"
          android:id="@+id/clockSlider"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"/>

  <LinearLayout
          android:layout_marginTop="8dip"
          android:orientation="horizontal"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content">
      <Button android:id="@+id/shush"
              android:text="@string/shush"
              android:gravity="center"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_weight="1"/>
      <Button android:id="@+id/keepItOff"
              android:text="@string/keepItOff"
              android:gravity="center"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_weight="1"/>
  </LinearLayout>

</LinearLayout>